--- a/MovieApp/Scenes/HomePage/View/Cell/FilterCategoryCell.xib
+++ b/MovieApp/Scenes/HomePage/View/Cell/FilterCategoryCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FilterCategoryCell" customModule="MovieApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" id="KGk-i7-Jjw" customClass="FilterCategoryCell" customModule="MovieApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vDF-va-TL6">
-                        <rect key="frame" x="4" y="0.0" width="312" height="44"/>
+                        <rect key="frame" x="4" y="11" width="312" height="22.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="18"/>
                         <nil key="textColor"/>
@@ -25,10 +25,9 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="vDF-va-TL6" secondAttribute="bottom" id="EML-GM-9aX"/>
+                    <constraint firstItem="vDF-va-TL6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="A2i-W4-8vu"/>
                     <constraint firstAttribute="trailing" secondItem="vDF-va-TL6" secondAttribute="trailing" constant="4" id="ZBP-2A-JED"/>
                     <constraint firstItem="vDF-va-TL6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="hh8-ZL-cyT"/>
-                    <constraint firstItem="vDF-va-TL6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yLJ-gJ-EWe"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
