--- a/MovieApp/Base.lproj/Main.storyboard
+++ b/MovieApp/Base.lproj/Main.storyboard
@@ -139,40 +139,67 @@
             </objects>
             <point key="canvasLocation" x="4729" y="84"/>
         </scene>
-        <!--SearchVC-->
+        <!--Search Controller-->
         <scene sceneID="tIl-Nz-pSx">
             <objects>
-                <viewController storyboardIdentifier="SearchVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Erg-4u-bOt" customClass="SearchVC" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Erg-4u-bOt" customClass="SearchController" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zbv-g9-j96">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z1U-OG-Zn5">
-                                <rect key="frame" x="4" y="112" width="406" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z1U-OG-Zn5">
+                                <rect key="frame" x="44.5" y="97" width="349.5" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
-                                    <action selector="searchTextField:" destination="Erg-4u-bOt" eventType="editingChanged" id="F8M-G6-WUC"/>
+                                    <action selector="searchText:" destination="Erg-4u-bOt" eventType="editingChanged" id="ot8-zr-Cpd"/>
                                     <outlet property="delegate" destination="Erg-4u-bOt" id="Ido-qq-RDU"/>
                                 </connections>
                             </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TMo-Gr-X5r">
+                                <rect key="frame" x="16" y="104.5" width="20.5" height="18.5"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VB5-qY-6Ic">
+                                <rect key="frame" x="0.0" y="147" width="414" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SRb-6v-ldP">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Erg-4u-bOt" id="nBi-g5-fMp"/>
+                                    <outlet property="delegate" destination="Erg-4u-bOt" id="o8r-gT-1ne"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Q2i-hj-oOR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
-                            <constraint firstItem="Q2i-hj-oOR" firstAttribute="trailing" secondItem="Z1U-OG-Zn5" secondAttribute="trailing" constant="4" id="VNX-CV-Lg8"/>
-                            <constraint firstItem="Z1U-OG-Zn5" firstAttribute="leading" secondItem="Q2i-hj-oOR" secondAttribute="leading" constant="4" id="Wrq-au-fum"/>
-                            <constraint firstItem="Z1U-OG-Zn5" firstAttribute="top" secondItem="Q2i-hj-oOR" secondAttribute="top" constant="24" id="tdF-hW-Qgb"/>
+                            <constraint firstItem="Q2i-hj-oOR" firstAttribute="trailing" secondItem="Z1U-OG-Zn5" secondAttribute="trailing" constant="20" id="7qF-LM-f4q"/>
+                            <constraint firstItem="Z1U-OG-Zn5" firstAttribute="height" secondItem="TMo-Gr-X5r" secondAttribute="height" multiplier="1.7" id="HcV-4b-ek8"/>
+                            <constraint firstItem="VB5-qY-6Ic" firstAttribute="bottom" secondItem="Q2i-hj-oOR" secondAttribute="bottom" id="Tlz-c8-ywn"/>
+                            <constraint firstItem="VB5-qY-6Ic" firstAttribute="top" secondItem="Z1U-OG-Zn5" secondAttribute="bottom" constant="16" id="ZGT-yr-DXb"/>
+                            <constraint firstItem="TMo-Gr-X5r" firstAttribute="top" secondItem="Q2i-hj-oOR" secondAttribute="top" constant="16" id="a5C-h8-R7n"/>
+                            <constraint firstItem="VB5-qY-6Ic" firstAttribute="leading" secondItem="Q2i-hj-oOR" secondAttribute="leading" id="ing-w6-Sem"/>
+                            <constraint firstItem="VB5-qY-6Ic" firstAttribute="trailing" secondItem="Q2i-hj-oOR" secondAttribute="trailing" id="pgX-j9-rb3"/>
+                            <constraint firstItem="TMo-Gr-X5r" firstAttribute="leading" secondItem="Q2i-hj-oOR" secondAttribute="leading" constant="16" id="tAz-bL-A78"/>
+                            <constraint firstItem="Z1U-OG-Zn5" firstAttribute="leading" secondItem="TMo-Gr-X5r" secondAttribute="trailing" constant="8" id="xmY-Ze-4iA"/>
+                            <constraint firstItem="Z1U-OG-Zn5" firstAttribute="centerY" secondItem="TMo-Gr-X5r" secondAttribute="centerY" id="zak-3F-Fgl"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="OFS-dT-ita"/>
                     <connections>
+                        <outlet property="collection" destination="VB5-qY-6Ic" id="pdJ-TS-4Cf"/>
                         <outlet property="textField" destination="Z1U-OG-Zn5" id="62q-Vg-Z8D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6DK-ie-G9t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="19" y="1656"/>
+            <point key="canvasLocation" x="18.840579710144929" y="1655.3571428571429"/>
         </scene>
         <!--Favorite Controller-->
         <scene sceneID="4VX-kf-3rR">
@@ -611,20 +638,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bh5-99-O1a">
-                                <rect key="frame" x="12" y="80" width="390" height="782"/>
+                                <rect key="frame" x="12" y="104" width="390" height="758"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="6rM-fd-dgG" id="2C6-6k-EBu"/>
                                     <outlet property="delegate" destination="6rM-fd-dgG" id="yfW-Tt-rOi"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Filter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xm5-tk-Sr7">
+                                <rect key="frame" x="16" y="60" width="378" height="21"/>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="N4C-4p-tz6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="xm5-tk-Sr7" firstAttribute="top" secondItem="N4C-4p-tz6" secondAttribute="top" constant="16" id="82h-mE-eL3"/>
                             <constraint firstItem="bh5-99-O1a" firstAttribute="leading" secondItem="N4C-4p-tz6" secondAttribute="leading" constant="12" id="dNy-5s-WCB"/>
+                            <constraint firstItem="xm5-tk-Sr7" firstAttribute="leading" secondItem="N4C-4p-tz6" secondAttribute="leading" constant="16" id="dZY-DW-6j1"/>
                             <constraint firstItem="N4C-4p-tz6" firstAttribute="bottom" secondItem="bh5-99-O1a" secondAttribute="bottom" id="pPN-Ly-qaj"/>
-                            <constraint firstItem="bh5-99-O1a" firstAttribute="top" secondItem="N4C-4p-tz6" secondAttribute="top" constant="36" id="tu4-Y1-wKO"/>
+                            <constraint firstItem="bh5-99-O1a" firstAttribute="top" secondItem="N4C-4p-tz6" secondAttribute="top" constant="60" id="tu4-Y1-wKO"/>
                             <constraint firstItem="N4C-4p-tz6" firstAttribute="trailing" secondItem="bh5-99-O1a" secondAttribute="trailing" constant="12" id="z53-gk-Fe9"/>
                         </constraints>
                     </view>
@@ -634,7 +669,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1xp-f4-fUK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2842" y="892"/>
+            <point key="canvasLocation" x="2840.579710144928" y="891.96428571428567"/>
         </scene>
         <!--Search-->
         <scene sceneID="Y7q-op-d2m">
@@ -663,6 +698,9 @@
         <image name="playButton" width="512" height="512"/>
         <image name="save" width="16" height="20"/>
         <image name="starFill" width="2175" height="2050"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="placeholderTextColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
