--- a/MovieApp/Scenes/HomePage/View/Controllers/MovieHeaderView.xib
+++ b/MovieApp/Scenes/HomePage/View/Controllers/MovieHeaderView.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="U6b-Vx-4bR" customClass="MovieHeaderViewController" customModule="MovieApp" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="U6b-Vx-4bR" customClass="MovieHeaderView" customModule="MovieApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="494" height="307"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -26,8 +26,8 @@
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6Ti-0W-neT">
-                    <rect key="frame" x="4" y="45.5" width="486" height="216.5"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" indicatorStyle="white" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6Ti-0W-neT">
+                    <rect key="frame" x="4" y="45.5" width="486" height="216"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="C2G-9p-rhK">
                         <size key="itemSize" width="128" height="128"/>
@@ -40,17 +40,6 @@
                         <outlet property="delegate" destination="U6b-Vx-4bR" id="BAO-Tm-Pxs"/>
                     </connections>
                 </collectionView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GwA-Pf-exO">
-                    <rect key="frame" x="24" y="278" width="42.5" height="21"/>
-                    <attributedString key="attributedText">
-                        <fragment content="Label">
-                            <attributes>
-                                <font key="NSFont" size="18" name="Optima-Bold"/>
-                            </attributes>
-                        </fragment>
-                    </attributedString>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3f-9m-4DW">
                     <rect key="frame" x="410" y="9" width="60" height="20"/>
                     <constraints>
@@ -71,19 +60,16 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="6Ti-0W-neT" firstAttribute="top" secondItem="hno-oy-f3s" secondAttribute="bottom" constant="16" id="7Zg-2b-I6H"/>
+                <constraint firstItem="6Ti-0W-neT" firstAttribute="centerY" secondItem="U6b-Vx-4bR" secondAttribute="centerY" id="9sR-XF-K4A"/>
                 <constraint firstItem="6Ti-0W-neT" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" constant="4" id="KTv-8C-gR8"/>
                 <constraint firstItem="h3f-9m-4DW" firstAttribute="centerY" secondItem="hno-oy-f3s" secondAttribute="centerY" id="QTA-jc-GIH"/>
                 <constraint firstItem="h3f-9m-4DW" firstAttribute="leading" secondItem="hno-oy-f3s" secondAttribute="trailing" constant="12" id="Rmr-Gy-rJe"/>
                 <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="6Ti-0W-neT" secondAttribute="trailing" constant="4" id="UGQ-ZY-Ebb"/>
                 <constraint firstAttribute="trailing" secondItem="h3f-9m-4DW" secondAttribute="trailing" constant="24" id="h4o-Zu-Nr8"/>
-                <constraint firstItem="GwA-Pf-exO" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="24" id="kYy-Be-YHT"/>
-                <constraint firstAttribute="bottom" secondItem="GwA-Pf-exO" secondAttribute="bottom" constant="8" id="kyU-M7-GXP"/>
                 <constraint firstItem="hno-oy-f3s" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" constant="24" id="shs-ia-MHt"/>
                 <constraint firstItem="hno-oy-f3s" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" constant="8" id="zDi-c5-QIc"/>
-                <constraint firstItem="GwA-Pf-exO" firstAttribute="top" secondItem="6Ti-0W-neT" secondAttribute="bottom" constant="16" id="zju-rn-L7d"/>
             </constraints>
             <connections>
-                <outlet property="headerBottomMovieTitle" destination="GwA-Pf-exO" id="8DX-Ro-y26"/>
                 <outlet property="headerCollection" destination="6Ti-0W-neT" id="IHu-oh-W2G"/>
                 <outlet property="headerSeeMoreButton" destination="h3f-9m-4DW" id="rBd-w7-1HY"/>
                 <outlet property="headerTopMovieTitle" destination="hno-oy-f3s" id="xDx-m8-RKE"/>
