--- a/MovieApp/Scenes/PopularMoviesDetail/View/Controller/MovieDetailHeader.xib
+++ b/MovieApp/Scenes/PopularMoviesDetail/View/Controller/MovieDetailHeader.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieDetailHeaderVC" id="U6b-Vx-4bR" customClass="MovieDetailHeaderVC" customModule="MovieApp" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieDetailHeader" id="U6b-Vx-4bR" customClass="MovieDetailHeader" customModule="MovieApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="650" height="486"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
