--- a/MovieApp/Base.lproj/Main.storyboard
+++ b/MovieApp/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Fdt-id-f8d">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="W0e-Hh-vth">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -82,7 +82,7 @@
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yro-UC-C9t"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="yro-UC-C9t" firstAttribute="trailing" secondItem="Fdt-id-f8d" secondAttribute="trailing" id="RtJ-2T-H98"/>
                             <constraint firstItem="Fdt-id-f8d" firstAttribute="leading" secondItem="yro-UC-C9t" secondAttribute="leading" id="ieS-Lx-piN"/>
@@ -160,7 +160,7 @@
                                 <rect key="frame" x="16" y="104.5" width="20.5" height="18.5"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VB5-qY-6Ic">
-                                <rect key="frame" x="0.0" y="147" width="414" height="666"/>
+                                <rect key="frame" x="8" y="147" width="406" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SRb-6v-ldP">
                                     <size key="itemSize" width="128" height="128"/>
@@ -184,7 +184,7 @@
                             <constraint firstItem="VB5-qY-6Ic" firstAttribute="bottom" secondItem="Q2i-hj-oOR" secondAttribute="bottom" id="Tlz-c8-ywn"/>
                             <constraint firstItem="VB5-qY-6Ic" firstAttribute="top" secondItem="Z1U-OG-Zn5" secondAttribute="bottom" constant="16" id="ZGT-yr-DXb"/>
                             <constraint firstItem="TMo-Gr-X5r" firstAttribute="top" secondItem="Q2i-hj-oOR" secondAttribute="top" constant="16" id="a5C-h8-R7n"/>
-                            <constraint firstItem="VB5-qY-6Ic" firstAttribute="leading" secondItem="Q2i-hj-oOR" secondAttribute="leading" id="ing-w6-Sem"/>
+                            <constraint firstItem="VB5-qY-6Ic" firstAttribute="leading" secondItem="Q2i-hj-oOR" secondAttribute="leading" constant="8" id="ing-w6-Sem"/>
                             <constraint firstItem="VB5-qY-6Ic" firstAttribute="trailing" secondItem="Q2i-hj-oOR" secondAttribute="trailing" id="pgX-j9-rb3"/>
                             <constraint firstItem="TMo-Gr-X5r" firstAttribute="leading" secondItem="Q2i-hj-oOR" secondAttribute="leading" constant="16" id="tAz-bL-A78"/>
                             <constraint firstItem="Z1U-OG-Zn5" firstAttribute="leading" secondItem="TMo-Gr-X5r" secondAttribute="trailing" constant="8" id="xmY-Ze-4iA"/>
@@ -402,14 +402,14 @@
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="n4V-8P-NAv">
-                                                                    <rect key="frame" x="20" y="7.5" width="63" height="17"/>
+                                                                    <rect key="frame" x="20" y="8" width="74.5" height="20.5"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XDC-qX-dZA">
-                                                                    <rect key="frame" x="20" y="27" width="40.5" height="13.5"/>
+                                                                    <rect key="frame" x="20" y="28.5" width="40.5" height="13.5"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <fontDescription key="fontDescription" type="italicSystem" pointSize="11"/>
                                                                     <nil key="textColor"/>
